<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/manufacturer_pdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/manufacturer"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:gravity="start"
        android:maxLength="80"
        android:layout_margin="16dp"
        android:background="@drawable/edittext_design"
        android:minHeight="48dp"
        android:padding="6dp"
        android:saveEnabled="true"
        android:textColorHint="#757575"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/equipment_name_pdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/manufacturer_pdf"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/equipment_name"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:gravity="start"
        android:maxLength="80"
        android:layout_margin="16dp"
        android:background="@drawable/edittext_design"
        android:minHeight="48dp"
        android:padding="6dp"
        android:saveEnabled="true"
        android:textColorHint="#757575"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/equipment_id_pdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/equipment_name_pdf"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/equipment_id"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:gravity="start"
        android:layout_margin="16dp"
        android:background="@drawable/edittext_design"
        android:minHeight="48dp"
        android:padding="6dp"
        android:maxLength="80"
        android:saveEnabled="true"
        android:textColorHint="#757575"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/inspector_name_pdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/equipment_id_pdf"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/inspector_full_name"
        android:gravity="start"
        android:layout_margin="16dp"
        android:background="@drawable/edittext_design"
        android:minHeight="48dp"
        android:padding="6dp"
        android:maxLength="40"
        android:saveEnabled="true"
        android:textColorHint="#757575"
        android:singleLine="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>